# ezbotf

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/source/: conf.py  index.rst
docs/source/clireference/: about.rst  reference.rst
docs/source/configurations/: instance-configuration.rst  translations.rst
docs/source/firststeps/: contrinstall.rst  firstinstance.rst  userinstall.rst
docs/source/framework/: argumentparser.rst  cli.rst  common.rst  context.rst  exceptions.rst  ezlog.rst  instance.rst  instancecontext.rst  messages.rst  permissions.rst  plugin.rst  pluginloader.rst  reprutil.rst  translator.rst  types.rst  utils.rst  version.rst
docs/source/framework/argumentparser/: _casts.rst  argumentparseerror.rst  casts.rst  parser.rst
docs/source/other/: issuecontr.rst
docs/source/plugindev/: quickstart.rst
ezbotf/: .readthedocs.yaml  __init__.py  cli.py  common.py  context.py  exceptions.py  ezlog.py  instance.py  instancecontext.py  messages.py  permissions.py  plugin.py  pluginloader.py  reprutil.py  translator.py  types.py  utils.py  version.py
ezbotf/argumentparser/: __init__.py  _casts.py  argumentparseerror.py  casts.py  parser.py
ezbotf/env_default/: .ezbotf
ezbotf/env_default/instances/: default.toml
ezbotf/env_default/lang/: en.toml
ezbotf/templates/environment/instances/: default.toml
ezbotf/templates/environment/lang/: en.toml
ezbotf/templates/plugin_empty/: main.py  plugin.toml
ezbotf/templates/plugin_example/: main.py
ezbotf/templates/plugin_example/config/: default.toml
(+1 files in other folders)
